--- a/src/App.css
+++ b/src/App.css
@@ -2,16 +2,10 @@
 
 * {
   font-family: "Outfit", serif;
+  scroll-behavior: smooth !important;
 }
 
-.button-gradient {
-  background: linear-gradient(103.52deg, #3A3EF5 18.99%, #32C8F1 82.34%);
-}
-
-.linear-background {
-  background: linear-gradient(180deg, rgba(59, 40, 246, 0.22) 0%, rgba(59, 40, 246, 0) 100%);
-}
-
+/* ================================= Slider Classes  ========================================== */
 .slick-arrow {
   display: none !important;
 }
@@ -21,13 +15,50 @@
   gap: 24px !important;
 }
 
+.slick-dots li.slick-active button:before {
+  min-width: 15px;
+  border-radius: 20px !important;
+}
+.slick-dots li button:before {
+  transition: all 300ms ease !important;
+  border-radius: 20px !important;
+  color: black;
+  border-radius: 0 !important;
+  max-width: 5px;
+  max-height: 5px;
+  content: "" !important;
+  border-radius: 100px !important;
+  background-color: white !important;
+}
+
+.slick-dots {
+  border-radius: 0 !important;
+  bottom: -20% !important;
+}
+ 
+/* ================================= Gradient classes ========================================== */
+.button-gradient {
+  background: linear-gradient(103.52deg, #3A3EF5 18.99%, #32C8F1 82.34%);
+}
+
+.linear-background {
+  background: linear-gradient(180deg, rgba(59, 40, 246, 0.22) 0%, rgba(59, 40, 246, 0) 100%);
+}
+
 .border-gradient {
-  border-right: 1px solid transparent;
+  border-right: 2px solid transparent;
   border-image-source: linear-gradient(180deg, rgba(255, 255, 255, 0.5) 0%, rgba(255, 255, 255, 0) 100%);
   border-image-slice: 1;
 }
+
 .border-gradient-2 {
   border-top: 2px solid transparent;
   border-image-source:linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.7) 47%, rgba(255, 255, 255, 0) 100%);
   border-image-slice: 1;
+}
+.border-gradient-3 {
+  border: 1px solid transparent;
+  border-image-source: linear-gradient(103.52deg, #3A3EF5 18.99%, #32C8F1 82.34%);
+  border-image-slice: 1;
+  border-radius: 50px !important;
 }
